--- a/mylc-frontend/src/app/components/header/header.component.scss
+++ b/mylc-frontend/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 .title {
     font-size: xx-large;
     margin: 20px 0px;
+    user-select: none;
 }
 .mat-icon-button {
     margin-right: 20px;
