--- a/mylc-frontend/src/app/components/problem-list/problem-list.component.scss
+++ b/mylc-frontend/src/app/components/problem-list/problem-list.component.scss
@@ -29,8 +29,6 @@ a {
 
 }
 .table-container {
-  width: 80%;
   justify-content: center;
-  margin: auto;
   overflow: auto;
 }
