--- a/mylc-frontend/src/app/recs-list/recs-list.component.scss
+++ b/mylc-frontend/src/app/recs-list/recs-list.component.scss
@@ -28,9 +28,7 @@
   
   }
   .table-container {
-    width: 80%;
     justify-content: center;
-    margin: auto;
     overflow: auto;
   }
   
