--- a/mylc-frontend/src/styles.scss
+++ b/mylc-frontend/src/styles.scss
@@ -93,16 +93,17 @@ $light-bg-darker-10:  darken($light-background, 10%);
 $light-bg-darker-20:  darken($light-background, 20%);
 $light-bg-darker-30:  darken($light-background, 30%);
 $light-bg-lighter-5:  lighten($light-background, 5%);
+$light-bg-lighter-10:  lighten($light-background, 10%);
 $dark-bg-tooltip:     lighten(#232323, 20%);
 $dark-bg-alpha-4:     rgba(#232323, 0.04);
 $dark-bg-alpha-12:    rgba(#232323, 0.12);
-
+$off-white:           #FAF9F6;
 $mat-light-theme-background: (
   background:               $light-background,
   status-bar:               $light-bg-darker-20,
-  app-bar:                  $light-text,
+  app-bar:                  $off-white,
   hover:                    $dark-bg-alpha-4,
-  card:                     $light-bg-lighter-5,
+  card:                     $light-bg-lighter-10,
   dialog:                   $light-bg-lighter-5,
   tooltip:                  $dark-bg-tooltip,
   disabled-button:          $dark-bg-alpha-12,
@@ -269,3 +270,7 @@ $altTheme: (
 body { 
   transition: all 200ms linear;
 }
+div.mat-expansion-panel-body {
+  padding: 0 !important;
+}
+
